--- a/submit_blog.html
+++ b/submit_blog.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="submit_blog.css"/>
+    <link rel="stylesheet" href="submit_blog.css" />
 
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
@@ -15,44 +16,36 @@
     <script defer src="submit_blog.js"></script>
     <title>Submit Blog!</title>
 </head>
+
 <body>
 
-<h1 id = title> Submit Here</h1>
+    <h1 id=title> Submit Here</h1>
 
-<div id = "switch">
-<a href="index.html"><button id = "switch-to-home"> Click here to go back</button></a>
-</div>
+    <div id="switch">
+        <a href="index.html"><button id="switch-to-home"> Click here to go back</button></a>
+    </div>
 
-<div id = "user-input">
-    <form>
-        <div class="input-container">
-            <label>Username:</label>
-            <input
-                type="text"
-                id="username"
-            />
-        </div>
+    <div id="user-input">
+        <form>
+            <div class="input-container">
+                <label>Username:</label>
+                <input type="text" id="username" />
+            </div>
 
-        <div class="input-container">
-            <label>Title of post:</label>
-            <input
-                type="text"
-                id="title-of-post"
-            />
-        </div>
+            <div class="input-container">
+                <label>Title of post:</label>
+                <input type="text" id="title-of-post" />
+            </div>
 
-        <div class="input-container">
-            <label>Message:</label>
-            <input
-                type="text"
-                id="message"
-            />
-        </div>
-    </form>
-</div>
+            <div class="input-container">
+                <label>Message:</label>
+                <input type="text" id="message" />
+            </div>
+        </form>
+    </div>
 
-<div id = "button">
-<button id = "Submit"> Submit Blog Post</button>
-</div>
+    <div id="button">
+        <button id="Submit"> Submit Blog Post</button>
+    </div>
 
 </body>
