--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 id="title">BLOGS</h1>
 
     <div id="for_button">
-        <a href="submit_blog.html"><button id="Submit"> Click here to see blogs</button></a>
+        <a href="submit_blog.html"><button id="Submit"> Click here to submit a blog!</button></a>
     </div>
 
     <div id="all_messages">
